# jjj

./: .gitignore  .ignore  CARGO.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  flake.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/WORKFLOWS/: cargo-mutants.yml
.github/workflows/: cargo-mutants.yml  ci.yml  docs.yaml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: configuration.md  installation.md
mutants.out/: missed.txt
src/: app.rs  cli.rs  commands.rs  errors.rs  events.rs  logger.rs  main.rs  utils.rs
src/backend/: config.rs  log.rs  mod.rs  poll.rs  revisions.rs
src/components/: mod.rs  version.rs
src/frontend/: change_buffer.rs  command_line.rs  empty_buffer.rs  error_popup.rs  focus.rs  mod.rs  navigation.rs  revset_prompt.rs  space_menu.rs  status_line.rs  viewport.rs
src/frontend/snapshots/: jjj__frontend__change_buffer__tests__snapshot_decoration_line.snap  jjj__frontend__change_buffer__tests__snapshot_revision_bottom_line.snap  jjj__frontend__change_buffer__tests__snapshot_revision_top_line.snap  jjj__frontend__command_line__tests__snapshot_command_line.snap  jjj__frontend__empty_buffer__tests__snapshot_command_line.snap  jjj__frontend__error_popup__tests__snapshot_many_errors.snap  jjj__frontend__error_popup__tests__snapshot_no_errors.snap  jjj__frontend__error_popup__tests__snapshot_one_error.snap  jjj__frontend__revset_prompt__tests__snapshot_revset_prompt.snap  jjj__frontend__space_menu__tests__snapshot_revset_prompt.snap  jjj__frontend__status_line__tests__snapshot_logged_revset.snap  jjj__frontend__status_line__tests__snapshot_selected_revset_range.snap  jjj__frontend__status_line__tests__snapshot_selected_revset_single.snap
src/screens/: interface.rs  mod.rs  splash.rs
