[package]
name = "jjj"
version = "0.0.0"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
description = "A simple TUI for jj."
edition = "2021"
homepage = "https://jjj.isaaccorbrey.com"
repository = "https://github.com/icorbrey/jjj"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["jj", "gui", "cli", "terminal", "ui"]

[dependencies]
bevy_ratatui = "0.7.1"
color-eyre = "0.6.3"
crossterm = "0.28.1"
lazy_static = "1.5.0"
ratatui = "0.29.0"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = ["bevy_state"]

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
