[package]
name = "jjj"
version = "0.0.0"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
description = "A simple TUI for jj."
edition = "2021"
homepage = "https://jjj.isaaccorbrey.com"
repository = "https://github.com/icorbrey/jjj"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["jj", "gui", "cli", "terminal", "ui"]

[dependencies]
anyhow = "1.0.97"
bevy_ratatui = "0.7.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["cargo", "derive", "string", "wrap_help"] }
crossterm = "0.28.1"
lazy_static = "1.5.0"
rand = "0.9.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1.11.1"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = ["bevy_state"]

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
